tests/sksl/errors/ForInitStmt.glsl
### Compilation failed:

error: 2: expected expression, but found 'for'
1 error
